# genie

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  API_USAGE.md  CLAUDE.md  app.py  auto_runner.py  back.ipynb  backtest.ipynb  deploy.sh  docker-compose.yml  genie.service  logs.md  main.py  main_runner.py  pyproject.toml  refactor_logs.md  skills.md  strategy.py  strategy_runner.py  test.ipynb  test.py  todo.md
.claude/: CLAUDE.md
.github/workflows/: deploy.yml
AGENTS/: architect.md  reviewer.md
SOT/: context.md  decisions.md  refactor_logs.md  rules.md  skills.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_exchanges_table.py  003_add_tickers_table.py  004_remove_exchanges_add_data_source.py  005_extend_tickers_name_active.py  006_add_tickers_industry_code.py  007_add_stock_fundamentals_table.py  008_add_stock_daily_candles_table.py  009_add_stock_dividends_table.py  010_drop_stock_dividends_dividend_yield.py  011_add_stock_treasury_stocks_table.py  012_add_stock_buyback_events_table.py  013_add_tickers_sector_columns.py  014_add_stock_income_statements_table.py  015_add_stock_cancellation_events_table.py  016_add_stock_financial_ratios_table.py
docs/: frontend.md  infra.md  kis.md  stock.md  종목_선정_점수표.md
infra/nginx/: genie.conf
scripts/: backfill_buybacks.py  backfill_cancellations.py  backfill_daily_candles.py  backfill_dividends.py  backfill_financial_ratios.py  backfill_fundamentals.py  backfill_income_statements.py  backfill_treasury_stocks.py  cleanup_dividend_duplicates.py  init.sql  init_timescale.sql  mcp-prod-pg.sh
src/: allocation_manager.py  api.py  config.py  constants.py  container.py  logging_config.py  main.py  scheduled_tasks.py  scheduler_config.py  scheduler_setup.py
src/adapters/: __init__.py  adapter_factory.py  candle_adapters.py
src/api/: __init__.py  exception_handlers.py  lifespan.py  middleware.py  schemas.py
src/backtest/: backtest.py  backtest_builder.py  commission_config.py  sizer_config.py
src/bithumb/: bithumb_api.py
src/collector/: data_fetcher.py  price_data_collector.py
src/common/: __init__.py  _ksic_data.py  candle_client.py  candle_schema.py  data_adapter.py  http_client.py  ksic.py  order_direction.py
src/database/: __init__.py  base_repository.py  candle_repositories.py  database.py  exchange_repository.py  models.py  repositories.py  request_scope.py  stock_buyback_event_repository.py  stock_cancellation_event_repository.py  stock_daily_candle_repository.py  stock_dividend_repository.py  stock_financial_ratio_repository.py  stock_fundamental_repository.py  stock_income_statement_repository.py  stock_treasury_stock_repository.py  ticker_repository.py  가이드.md
src/hantu/: __init__.py  base_api.py  domestic_api.py  hantu_api.py  overseas_api.py
src/models/: __init__.py  trade_record.py
src/providers/: __init__.py  binance_candle_client.py  dart_company_client.py  hantu_candle_client.py  kis_company_client.py  kis_estimate_client.py  kis_financial_ratio_client.py  kis_income_statement_client.py  pykrx_daily_candle_client.py  pykrx_fundamental_client.py  pykrx_ticker_client.py  upbit_candle_client.py
src/report/: reporter.py
src/scheduled_tasks/: __init__.py  context.py  schedules.py  scope.py  tasks.py
src/service/: __init__.py  buyback_service.py  buyback_sync_service.py  cancellation_sync_service.py  candle_query_service.py  candle_service.py  daily_candle_sync_service.py  dividend_service.py  dividend_sync_service.py  exceptions.py  exchange_service.py  financial_ratio_sync_service.py  fundamental_service.py  fundamental_sync_service.py  income_statement_service.py  income_statement_sync_service.py  screening_service.py  stock_daily_candle_service.py  ticker_service.py  ticker_sync_service.py  treasury_stock_sync_service.py
src/strategy/: __init__.py  base.py  base_strategy.py  cache_manager.py  cache_models.py  clock.py  config.py  factory.py  morning_afternoon_strategy.py  o_dol_strategy.py  order_executor.py  strategy.py  strategy_context.py  utils.py  volatility_strategy.py  구현가이드.md  변동성.md
src/upbit/: upbit_api.py
tests/: conftest.py  test_allocation_manager.py  test_config.py  test_constants.py  test_container.py
tests/adapters/: test_common_candle_adapter.py  test_upbit_candle_adapter.py
tests/api/: test_candle_api.py  test_dividend_api.py  test_exception_handlers.py  test_exchange_api.py  test_fundamental_api.py  test_screening_api.py  test_session_scope.py  test_strategy_api.py  test_ticker_api.py
tests/backtest/: test_backtest.py  test_commission_config.py  test_data_feed_config.py  test_sizer_config.py
tests/bithumb/: __init__.py  test_bithumb_api.py
tests/common/: test_candle_client.py  test_candle_schema.py  test_ksic.py
tests/database/: __init__.py  conftest.py  test_base_repository.py  test_candle_repositories.py  test_database.py  test_exchange.py  test_exchange_repository.py  test_price_repository.py  test_stock_dividend_repository.py  test_ticker.py  (+2 more)
util/: fetch_candles.py
web/: README.md  next.config.ts  package.json  pnpm-lock.yaml
(+183 files in other folders)
