[project]
name = "genie"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "pyupbit>=0.2.34",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.2.250926",
    "requests>=2.32.4",
    "ruff>=0.14.0",
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
]

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]
