[project]
name = "genie"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "pyupbit>=0.2.34",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.2.250926",
    "pandera>=0.20.0",
    "requests>=2.32.4",
    "ruff>=0.14.0",
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
    "apscheduler>=3.10.0",
]

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "ANN", # flake8-annotations (타입 힌트 강제)
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
]
ignore = [
    "ANN101", # missing-type-self (self 타입 힌트 불필요)
    "ANN102", # missing-type-cls (cls 타입 힌트 불필요)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN001", # 테스트에서는 타입 힌트 덜 엄격하게
    "ANN201",
    "ANN202",
]
