[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genie"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "backtrader2>=1.9.76.123",
    "python-dotenv>=1.1.1",
    "logtail-python>=0.2.0",
    "pyupbit>=0.2.34",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.2.250926",
    "pandera>=0.20.0",
    "requests>=2.32.4",
    "ruff>=0.14.1",
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
    "apscheduler>=3.10.0",
    "gspread>=6.0.0",
    "gspread-dataframe>=4.0.0",
    "tenacity>=9.0.0",
    "yfinance>=0.2.66",
    "finance-datareader>=0.9.96",
    "notebook>=7.4.7",
    "pyjwt>=2.10.1",
    "dependency-injector>=4.48.2",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 180
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "ANN", # flake8-annotations (타입 힌트 강제)
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN001", # 테스트에서는 타입 힌트 덜 엄격하게
    "ANN201",
    "ANN202",
    "N802", # 한글 테스트 메서드명 허용
    "F841", # 사용되지 않는 변수 허용 (mock 등)
    "B017", # blind exception 허용 (테스트에서 Exception 사용)
]
"main.py" = [
    "E501", # 주석 처리된 코드의 줄 길이 무시
]
"src/backtest/**/*.py" = [
    "ANN401", # backtrader 타입 무시를 위해 Any 사용 허용
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

# pydantic-settings BaseSettings 초기화 시 필수 인자 체크 완화
[[tool.mypy.overrides]]
module = "pydantic_settings.*"
warn_return_any = false

# BaseSettings를 상속받은 Config 클래스들은 __init__ 체크 완화
[[tool.mypy.overrides]]
module = "src.config"
disable_error_code = ["call-arg"]

# backtrader 타입 무시
[[tool.mypy.overrides]]
module = "backtrader.*"
ignore_missing_imports = true

# backtest 모듈의 backtrader 반환값 타입 체크 완화
[[tool.mypy.overrides]]
module = "src.backtest.*"
warn_return_any = false

# FinanceDataReader 타입 무시
[[tool.mypy.overrides]]
module = "FinanceDataReader"
ignore_missing_imports = true

# yfinance 타입 무시
[[tool.mypy.overrides]]
module = "yfinance"
ignore_missing_imports = true

# apscheduler 타입 무시
[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

# collector 모듈의 외부 라이브러리 반환값 타입 체크 완화
[[tool.mypy.overrides]]
module = "src.collector.*"
warn_return_any = false

# dependency_injector Provide 타입 체크 완화
[[tool.mypy.overrides]]
module = "dependency_injector.*"
ignore_missing_imports = true

# scheduled_tasks의 dependency injection 타입 체크 완화
[[tool.mypy.overrides]]
module = "src.scheduled_tasks"
disable_error_code = ["has-type"]
